--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width, initial-scale=1.0">
-    <title>arij web</title>
+    <title>arij imut gemoy</title>
 </head>
 <body>
     <table border="2">
@@ -30,3 +30,4 @@
 
 </body>
 </html>
+
